<resources>
    <string name="app_name">DeliveryShipperAndroidApp</string>
    <string name="login_edit_text_sdt_hint">Email hoặc số điện thoại</string>
    <string name="login_edit_text_password_hint">Mật khẩu</string>
    <string name="login_button_dangnhap">Đăng Nhập</string>
    <string name="login_button_dangky">Đăng ký</string>
    <string name="app_name_with_spaces">CVL Delivery Now</string>
    <string name="str_name">Tên</string>
    <string name="str_phone_number">Số điện thoại</string>
    <string name="str_password">Password</string>
    <string name="str_email">Email</string>
    <string name="str_signup">ĐĂNG KÝ</string>
    <string name="str_ok">OK</string>
    <string name="str_missing_info">Bạn phải điền đủ thông tin</string>
    <string name="text_view_quan_an">Quán</string>
    <string name="text_view_khach_hang">Khách</string>
    <string name="order_item_text_view_xem_chi_tiet">Xem chi tiết</string>
</resources>
